--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-<table id="board" border="0" cellspacing="5" cellpadding="5">
+<table id="board" border="0" cellspacing="10px" cellpadding="0">
 	<tr><td id="cell_0">1</td><td id="cell_1">2</td><td id="cell_2">3</td><td id="cell_3">4</td></tr>
 	<tr><td id="cell_4">1</td><td id="cell_5">2</td><td id="cell_6">3</td><td id="cell_7">4</td></tr>
 	<tr><td id="cell_8">1</td><td id="cell_9">2</td><td id="cell_10">3</td><td id="cell_11">4</td></tr>
-	<tr><td id="cell_12">1</td><td id="cell_13">2</td><td id="cell_14">3</td><td id="cell_15">4</td></tr>
+	<tr><td id="cell_12">1</td><td id="cell_13">2</td><td id="cell_14">3</td><td id="cell_15"><div class="selected">1</div>4</td></tr>
 </table>
 
 
